Navigation Spacing Fix for Extra Small Devices
Navigation Spacing Fix for Extra Small Devices

--- a/assets/sass/layout/_header.scss
+++ b/assets/sass/layout/_header.scss
@@ -136,12 +136,7 @@
 
 			> ul {
 				> li {
-					margin-left: 1.5em;
-
-					a {
-						height: 6em;
-						line-height: 6em;
-					}
+					margin: 0 1em;
 				}
 			}
 		}
